# xiao-halow-camera-selectable

./: .gitignore  CMakeLists.txt  README.md  build_flash.sh  partitions.csv  repair_deps.sh  sdkconfig.defaults  sdkconfig.defaults.esp32s3  setenv.sh  show_config.sh
components/micro_rtsp/: CMakeLists.txt  CRtspSession.cpp  CStreamer.cpp  LinkedListElement.h  platglue-idf.h  platglue.h
docs/: LOCAL-SECRETS.md  PAUSED-2026-06.md
main/: CMakeLists.txt  EspCameraStreamer.cpp  EspCameraStreamer.h  app_log.c  app_log.h  app_wifi.c  app_wifi.h  camera_build_config.example.h  camera_build_config.h  camera_heartbeat.c  camera_heartbeat.h  camera_http.c  camera_http.h  camera_httpd.cpp  camera_index.h  camera_rtsp.cpp  camera_rtsp.h  idf_component.yml  index_ov3660_stream.html  main.c  mm_app_common.c  mm_app_common.h  mm_app_loadconfig.c  mm_app_loadconfig.h
scripts/: patch_ov3660_full_html.py  regen_stream_html.py  setup-local-config.sh
